# biotica

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  FAREWELL.txt  INSTALL.md  INSTALLATION.md  MISSION_COMPLETE.txt  Makefile  PROJECT_COMPLETION_CERTIFICATE.txt  PROJECT_SUMMARY.md  README.md  TEAM_CERTIFICATE.txt  THE_END.txt  WELCOME.md  activate.sh  advanced_analysis.py  biotica.sh  biotica_demo.py  dashboard.sh  dashboard_biotica.html  dashboard_new.sh  demo_results.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  early_warning.py  environment.yml  (+32 more)
.github/workflows/: ci.yml  docs.yml
Netlify/: .env.example  .gitignore  README.md  netlify.toml  package-lock.json  package.json
Netlify/config/: site.config.json
Netlify/functions/: alerts.js  calculate-ibr.js  fetch-open-data.js  get-config.js  get-stats.js  measurements.js  parameters.js  sites.js  specimens.js  stats.js  status.js
Netlify/public/: dashboard.html  documentation.html  index.html  reports.html
data/: README.md
docs/: api.md  index.md  installation.md  usage.md
docs/source/: conf.py  index.rst
models/: README.md
paper/: BIOTICA_RESEARCH_PAPER.docx
r/: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  cran-comments.md  demo.R
r/R/: bayesian_weights.R  bayesian_weights_complete.R  biotica-package.R  correlation_analysis.R  descriptive_stats.R  food_web.R  ibr_composite.R  imports.R  plot.R  plot_comparison.R  python_integration.R  reticulate_integration.R  time_series_analysis.R  tipping_points.R  utils.R  validate.R  zzz.R
r/data/: biome_parameters.R  sample_data.R
r/data-raw/: generate_data.R
r/examples/: advanced_visualization.R  basic_example.R  complete_workflow.R
r/inst/: CITATION
r/man/: analyze_timeseries.Rd  bayesian_weights.Rd  bayesian_weights_complete.Rd  biotica-package.Rd  clip.Rd  compare_plots.Rd  ecosystem_stats.Rd  ibr_composite.Rd  normalize.Rd  parameter_correlation.Rd  plot.ibr.Rd  tipping_points.Rd  validate_parameters.Rd  weighted_sum.Rd
r/tests/: testthat.R
r/vignettes/: biotica.Rmd
reports/: BIOTICA_reports.html  PLOT_089_recovery_20260222.json  analyze_trends.py  crontab.example  export_data.py  final_system_report_20260222.md  generate_report.sh  run_all.sh  updated_statistics.json
reports/alerts/: alert_20260222_1430_CRITICAL.json  alert_20260222_1515_HIGH.json  alert_20260222_1600_MEDIUM.json  alert_system.sh
reports/daily/: analysis_20260222.json  processed_20260222.txt  report_20260222.md  report_20260222.txt  template.md  template.txt
reports/monthly/: report_February_2026.md  template.md  template.txt
reports/plots/: README.md  plot_generator.py
reports/statistics/: correlations.json  daily_stats.csv  latest_analysis.json  monthly_stats.csv  trends.json  weekly_stats.csv
scripts/: batch_process.sh  compute_ibr.py  generate_figures.py  setup_test_data.py  train_classifier.py  validate_data.py
tests/: __init__.py  conftest.py
(+46 files in other folders)
