[metadata]
name = biotica
version = attr: biotica.__version__
url = https://biotica.gitlab.io
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = BIOTICA: Advanced Biotechnology Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = biotechnology, bioinformatics, genomics, proteomics, sequence-analysis, protein-structure, gene-expression, machine-learning
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Framework :: Pytest
    Natural Language :: English
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    biopython>=1.79
    matplotlib>=3.5.0
    seaborn>=0.11.0
    pyyaml>=5.4.0
    python-dotenv>=0.19.0
    requests>=2.26.0
    click>=8.0.0
    rich>=10.0.0
    tqdm>=4.62.0
    python-dateutil>=2.8.2
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    docs
    tests
    notebooks
    scripts

[options.extras_require]
ml =
    tensorflow>=2.8.0
    torch>=1.10.0
    transformers>=4.12.0
viz =
    plotly>=5.5.0
    bokeh>=2.4.0
web =
    flask>=2.0.0
    streamlit>=1.10.0
    dash>=2.0.0
dev =
    pytest>=6.2.0
    pytest-cov>=2.12.0
    pytest-asyncio>=0.16.0
    ruff>=0.0.260
    black>=21.0.0
    mypy>=0.910
    pre-commit>=2.15.0
    isort>=5.10.0
docs =
    mkdocs>=1.3.0
    mkdocs-material>=8.2.0
    mkdocstrings[python]>=0.19.0
all =
    %(ml)s
    %(viz)s
    %(web)s
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    biotica = biotica.cli:main
    biotica-analyze = biotica.analysis.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black
line_length = 88
known_first_party = biotica

[bdist_wheel]
universal = 0
